--- a/mvc/package.json
+++ b/mvc/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "consign": "^0.1.6",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "fs": "^0.0.1-security"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
