--- a/rest/package.json
+++ b/rest/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^8.12.0",
     "consign": "^0.1.6",
     "express": "^4.18.2"
   },
