--- a/rest/package.json
+++ b/rest/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "jest",
+    "test-coverage": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +16,10 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@faker-js/faker": "^8.1.0",
+    "@types/jest": "29.4.0",
+    "jest": "29.4.1",
+    "nodemon": "^3.0.1",
+    "rewire": "^7.0.0"
   }
 }
