--- a/rest/package.json
+++ b/rest/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon app.js",
     "test": "jest",
-    "test-coverage": "jest --coverage"
+    "test-coverage": "jest --coverage --no-cache --config=tests/jest.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +19,6 @@
     "@faker-js/faker": "^8.1.0",
     "@types/jest": "29.4.0",
     "jest": "29.4.1",
-    "nodemon": "^3.0.1",
-    "rewire": "^7.0.0"
+    "nodemon": "^3.0.1"
   }
 }
