--- a/rest/package.json
+++ b/rest/package.json
@@ -2,9 +2,9 @@
   "name": "rest",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon server.js",
     "test": "jest",
     "test-coverage": "jest --coverage --no-cache --config=tests/jest.config.js"
   },
@@ -19,6 +19,7 @@
     "@faker-js/faker": "^8.1.0",
     "@types/jest": "29.4.0",
     "jest": "29.4.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
