--- a/kafka/package.json
+++ b/kafka/package.json
@@ -2,15 +2,18 @@
   "name": "producer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/server/server.js",
   "scripts": {
-    "producer": "node ./src/producer",
+    "server": "nodemon",
+    "consumer": "node ./src/eventstream/consumer/runConsumer",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "kafkajs": "^2.2.4"
+    "express": "^4.18.2",
+    "kafkajs": "^2.2.4",
+    "nodemon": "^3.0.1"
   }
 }
