--- a/kafka/package.json
+++ b/kafka/package.json
@@ -6,14 +6,21 @@
   "scripts": {
     "server": "nodemon",
     "consumer": "node ./src/eventstream/consumer/runConsumer",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config=tests/jest.config.js",
+    "test-coverage": "jest --coverage --config=tests/jest.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "kafkajs": "^2.2.4",
-    "nodemon": "^3.0.1"
+    "kafkajs": "^2.2.4"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
+    "@types/jest": "29.4.0",
+    "jest": "29.4.1",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
