--- a/kafka/package.json
+++ b/kafka/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.1.0",
     "@types/jest": "29.4.0",
-    "jest": "29.4.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
