--- a/rest-api-nest/package.json
+++ b/rest-api-nest/package.json
@@ -35,7 +35,7 @@
     "@babel/register": "7.24.6",
     "@babel/runtime": "7.25.0",
     "@nestjs/testing": "^10.0.0",
-    "jest": "29.7.0",
+    "jest": "^29.7.0",
     "nodemon": "3.1.4",
     "prettier": "3.3.3",
     "supertest": "7.0.0"
