--- a/rest/package.json
+++ b/rest/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
     "@types/jest": "29.5.6",
-    "jest": "29.7.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
